<resources>
    <string name="app_name">Jardim Botanico 2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="admob_app_id">ca-app-pub-5566653721914999~9056708863</string>
    <string name="admob_ad_unit_id_banner">ca-app-pub-5566653721914999/7300774068</string>
    <string name="admob_ad_unit_id_banner2">ca-app-pub-5566653721914999/3867799664</string>
    <string name="admob_ad_unit_id_interstitial">ca-app-pub-5566653721914999/5344532869</string>
    <string name="admob_ad_unit_id_rewarded_video">ca-app-pub-5566653721914999/6821266068</string>

    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="utilities">Utilities</string>
    <string name="last_meetings">Meetings</string>
    <string name="condominium_rules">Rules</string>
    <string name="website">Website</string>
    <string name="credits">Credits</string>
    <string name="aboutme">About the Dev</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
</resources>
