<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_aboutme_professional"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/credits" />

        <item
            android:id="@+id/nav_aboutme"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/aboutme" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <!--<item-->
            <!--android:id="@+id/nav_send"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="Send" />-->
        </menu>
    </item>

</menu>
